fix: Wrong font weight on page subtitle

--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -18,6 +18,7 @@
 .subtitle {
   color: var(--text-muted);
   font-size: 1.25rem;
+  font-weight: 400;
 }
 
 .descriptionContainer {
